Fixing bugs: Scrolling hides buttons at bottom, staff component boxes misaligned for large names

--- a/apps/ionic/medval/src/app/app.scss
+++ b/apps/ionic/medval/src/app/app.scss
@@ -235,6 +235,22 @@ ion-col.regular {
   margin-bottom: 2em !important;
 }
 
+.m-b-3 {
+  margin-bottom: 3em !important;
+}
+
+.m-b-3-5 {
+  margin-bottom: 3.5em !important;
+}
+
+.m-b-4 {
+  margin-bottom: 4em !important;
+}
+
+.m-b-5 {
+  margin-bottom: 5em !important;
+}
+
 .m-t-0 {
   margin-top: 0 !important;
 }
@@ -286,6 +302,15 @@ ion-col.regular {
 .m-l-10pct {
   margin-left: 10%;
 }
+
+.m-w-8 {
+  max-width:8em;
+}
+
+.m-w-10 {
+  max-width:10em;
+}
+
 
 .t-1 {
   top: 1em !important;
